--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
-<html>
+<html lang= "pt-br">
 
 <head>
     <link rel="stylesheet" href="style.css" />
 
     <title>Feliz Pascoa</title>
+    
 </head>
 
 <body>
-    
-<header>Camila Loures</header>
+    <section>
+ <div class="chamada-texto">
+<header>camila loures </header>
 
 <h1>CAÇA AOS OVOS 2024 NA NOVA MANSÃO LOURES !!!</h1>
 
 <p>Camila Loures</p>
 
-
+  </div>
+  
+<div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9g1GUFRD42k?si=JDHSbWAOVZleIQ-f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div> 
+
+</section>
 
 </body>
 
