--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
 </div> 
 
 </section>
+<section class="categoria">
+   <h2>mais videos </h2>
+     <div class="categoria-video">
+      <a href="https://www.youtube.com/watch?v=ZHJwvQyG82Q">
+        <img src="https://img.youtube.com/vi/ZHJwvQyG82Q/maxresdefault.jpg">
+      </a>
+      <a href="https://www.youtube.com/watch?v=yDhupkY30Bg">
+        <img src="https://img.youtube.com/vi/yDhupkY30Bg/maxresdefault.jpg">
+      </a>
+      <a href="https://www.youtube.com/watch?v=pWKXNMq9HQs">
+        <img src="https://img.youtube.com/vi/pWKXNMq9HQs/maxresdefault.jpg">
+      </a>
+      <a href="https://www.youtube.com/watch?v=JBN5vJcGvLo">
+        <img src="https://img.youtube.com/vi/JBN5vJcGvLo/maxresdefault.jpg">
+      </a>
+
+
+     </div>
+</section>
 
 </body>
 
